extend getUserInfo handler to include pokemon statss
